Please note that this version is marked "unstable", meaning it can be broken from time
to time. Do at least check the changelog for relevant info before using it.

2.3.0 27.01.2026:
*Parallel file hashing - now processes 4 files simultaneously for faster hashing on multi-core systems.
*Hashing progress shown per-file in status column (e.g., "Hashing 45%").
*Added keyboard shortcuts help dialog (press '?' to view).
*Fixed keyboard shortcuts interfering with system shortcuts (Ctrl+A, Cmd+C, etc.).
*Keyboard shortcuts now work with all keyboard layouts.

2.2.0 25.01.2026:
*Sibling files with same base name are now moved/renamed together with main file.
*Added "Remote" option to MyList state dropdown (for NAS/cloud storage).
*Added "remote" as valid state in !state and !state2 commands.
*Fixed empty argument handling for !anime, !group, !randomanime commands.
*Fixed !mylist output to show accurate anime information.

2.1.1 25.01.2026:
*Fixed Rules tab Save button not persisting changes to disk.
*Fixed quote parsing in rule names - quotes at end of strings are now properly stripped.
*Fixed config directory not being created automatically on save.

2.1.0 25.01.2026:
*Fixed Apply Rules context menu not working due to quote parsing bug.
*Apply Rules now works regardless of auto-rename setting (manual invocation bypasses checkbox).
*Default rename rule updated to: '%ann (%yea) - %enr - %epn [%src-%res][%aud][%dub][%vid]-%grp'

2.0.2 17.01.2026:
*Moved configuration from ~/.webaom to ~/.config/webaom/ (Linux), ~/Library/Application Support/webaom/ (macOS), %APPDATA%\webaom\ (Windows). Existing config is migrated automatically.

2.0.1 16.01.2026:
*Added AppImage packaging for Linux.

2.0.0 01.12.2025:
*First public release of the modernized WebAOM.
*Added "Load completed" checkbox in Anime panel to reload completed jobs from the database.
*Added native app packages for macOS (.dmg), Windows (.msi), and Linux (.deb).