@@ -4,6 +4,7 @@ to time. Do at least check the changelog for relevant info before using it.
 2.3.0 27.01.2026:
 *Parallel file hashing - now processes 4 files simultaneously for faster hashing on multi-core systems.
 *Hashing progress shown per-file in status column (e.g., "Hashing 45%").
+*Status bar now shows real-time hashing speed and session summary on completion.
 *Added keyboard shortcuts help dialog (press '?' to view).
 *Fixed keyboard shortcuts interfering with system shortcuts (Ctrl+A, Cmd+C, etc.).
 *Keyboard shortcuts now work with all keyboard layouts.
